--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "ee-first": "^1.1.1",
+    "ejs": "^3.1.9",
     "encodeurl": "^1.0.2",
     "es-define-property": "^1.0.0",
     "es-errors": "^1.3.0",
@@ -94,7 +95,6 @@
     "vary": "^1.1.2",
     "xtend": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
